--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,12 @@ wget
 pathlib
 pdfplumber
 numpy
+requests
+fastapi
+uvicorn
+python-dotenv==0.19.1
+aiofiles==0.7.0
+python-multipart==0.0.5
+jinja2==3.0.2
+Markdown==3.3.4
+pytest==6.2.5
